# indaba-colab-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
colab_demo/: compute_cumulative.py
colab_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
colab_demo/utils/: __init__.py  plotting.py
