[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colab-demo"
version = "0.0.0"
authors = [
    {name = "Ruan de Kock"},
]
description = "A Quick Demonstration for Running GitHub repo code in Google Colab."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache 2.0"}
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/RuanJohn/indaba-colab-demo"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
"*" = ["*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}